--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,13 @@ body {
     background-color: var(--color-bg);
 }
 
+main {
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 5vh;
+}
+
 /* Utility */
 .container {
     max-width: var(--max-width);
@@ -157,8 +164,6 @@ body {
     box-shadow:  0px 0px 20px black;
     border-radius: 5%;
     transition: all .7s ease-in-out;
-    
-
 }
 
 
@@ -203,6 +208,41 @@ section h2 {
     margin-bottom: var(--spacing-md);
     letter-spacing: -0.01em;
 }
+
+
+.projects-section {
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
+    max-height: 50vh;
+    margin: 0% 2.5%;
+    padding: 0%;
+    gap: 0.5%;
+    
+}
+
+.project {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1/1.6;
+    justify-content: center;
+    box-shadow:  0px 0px 20px black;
+    border-radius: 5%;
+    transition: all .7s ease-in-out;
+}
+
+.project img{
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
+    display: block;
+    border-radius: 5%;
+    border-style: solid;
+    border-width: 5px;
+    border-color:#111111;
+}
+
+
 
 /* About section */
 .about {
